Fix on iphone5 screen

--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -58,7 +58,6 @@ body {
   background-image: -webkit-linear-gradient(45deg, rgba(251, 223, 0, 0.7) 5%, rgba(0, 200, 243, 0.7));
   background-image: -ms-linear-gradient(45deg, rgba(251, 223, 0, 0.7) 5%, rgba(0, 200, 243, 0.7));
   background-image: linear-gradient(45deg, rgba(251, 223, 0, 0.7) 5%, rgba(0, 200, 243, 0.7));
-  overflow: hidden;
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center center;
@@ -126,7 +125,7 @@ a {
   border-radius: 4px; }
   #header h1 {
     font-size: 4.35em;
-    font-weight: 900;
+    font-weight: 100;
     letter-spacing: -0.035em;
     line-height: 1em; }
   #header p {
@@ -259,6 +258,12 @@ a {
   body, input, select, textarea {
     font-size: 11pt; }
 
+  #header .actions li a {
+    width: 14em; }
+  #header nav li {
+    width: 3em;
+    height: 3em; }
+
   /* BG */
   /* Header */
   #header h1 {
@@ -266,7 +271,11 @@ a {
   #header p {
     font-size: 1em; }
   #header nav {
-    font-size: 1em; } }
+    font-size: 1em; }
+    #header nav li {
+      line-height: inherit; }
+      #header nav li a:before {
+        font-size: 1em; } }
 /* Mobile (Portrait) */
 @media screen and (max-width: 480px) {
   /* BG */
